tests/snapshots/motion_bounds_test__B_at_beginning.snap
---
source: tests/motion_bounds_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 1

Buffer:
[h]ello-world
