tests/snapshots/motion_bounds_test__B_beyond_buffer.snap
---
source: tests/motion_bounds_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 1

Buffer:
[o]ne-two three-four
