tests/snapshots/motion_bounds_test__E_beyond_buffer.snap
---
source: tests/motion_bounds_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:2
Lines: 1

Buffer:
on[e]
