tests/snapshots/motion_bounds_test__G_already_at_bottom.snap
---
source: tests/motion_bounds_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 2

Buffer:
line 1
[l]ine 2
