tests/snapshots/motion_bounds_test__G_beyond_buffer.snap
---
source: tests/motion_bounds_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 998:0
Lines: 3

Buffer:
line 1
line 2
line 3
