tests/snapshots/motion_bounds_test__W_at_last_WORD.snap
---
source: tests/motion_bounds_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:10
Lines: 1

Buffer:
hello worl[d]
