tests/snapshots/motion_bounds_test__b_multiple_at_start.snap
---
source: tests/motion_bounds_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 1

Buffer:
[o]ne two three
