tests/snapshots/motion_bounds_test__close_brace_at_eof.snap
---
source: tests/motion_bounds_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:0
Lines: 3

Buffer:
para 1

[p]ara 2
