tests/snapshots/motion_bounds_test__close_paren_at_eof.snap
---
source: tests/motion_bounds_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:7
Lines: 1

Buffer:
First. [S]econd.
