tests/snapshots/motion_bounds_test__cw_at_last_word.snap
---
source: tests/motion_bounds_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:10
Lines: 1

Buffer:
hello eart[h]d
